Standing ImgBlock correction paddings on mobile in block and in solid button Remove mistaken styles for .block-promotion--text-large Added "foolproofing" when .text-block__content is into .text-block__content (in such case remove paddings)

--- a/src/resources/sass/blocks/promotion/_promotion-text.scss
+++ b/src/resources/sass/blocks/promotion/_promotion-text.scss
@@ -98,12 +98,3 @@
 		}
 	}
 }
-
-.block-promotion--text-large {
-	min-height: unset;
-	padding: 20px 0px;
-
-	.btn {
-		margin-top: 20px;
-	}
-}
