--- a/src/resources/sass/blocks/promotion/_text-block.scss
+++ b/src/resources/sass/blocks/promotion/_text-block.scss
@@ -57,6 +57,10 @@
 		>*:last-child {
 			margin-bottom: 0;
 		}
+
+		.text-block__content {
+			padding: 0;
+		}
 	}
 	
 	&__text {
@@ -96,6 +100,12 @@
 				background-position: center;
 				-webkit-background-size: cover;
 				background-size: cover;
+			}
+
+			&__content {
+				.text-block__content {
+					padding: 0;
+				}
 			}
 			
 			&__image {
